refactored some functions, changed fmxl